# kurs_work_6

./: .env.sample  README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  urls.py  utils.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailingattempt_send_time.py  0004_alter_mailing_start_time_and_more.py
mailing/templates/mailing/: client_list.html  index.html  mailing_attempt_list.html  mailing_detail.html  mailing_list.html  message_list.html
main/: urls.py  views.py
main/templates/main/: home_page.html
main/templates/main/includes/: inc_menu.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html  user_list.html
