[tool.poetry]
name = "kurs-work-6"
version = "0.1.0"
description = ""
authors = ["Сергей <sergey.vasilev.98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
django-apscheduler = "^0.7.0"
pillow = "^11.0.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
